# Precipitation-Nowcasting

./: .gitignore  README.md  demo.py  pixel_counts.npy
experiments/: benchmark.py  net_params.py  rover_and_last_frame.py
experiments/VarFlow/: CMakeLists.txt  ProfTimer.h  README.md  Readme.txt  VarFlow.cpp  VarFlow.h  build.sh  c_api.cpp  c_api.h  example.cpp  setup.py  windows_cmake_command.txt
experiments/VarFlow/varflow/: __init__.py  varflow.py
experiments/benchmark_stat/: conv2d.pkl  convLSTM_balacned_mse_mae.pkl  last_frame.pkl  model_run_avarage_time.pkl  rover_nonlinear.pkl  trajGRU_balanced_mse_mae.pkl  trajGRU_frame_weighted_mse.pkl
experiments/conv2d/: main.py
experiments/convLSTM_balacned_mse_mae/: main.py
experiments/trajGRU_CrossEntropy/: main.py
experiments/trajGRU_balanced_mse/: main.py
experiments/trajGRU_balanced_mse_mae/: main.py
experiments/trajGRU_frame_weighted_mse/: main.py
hko_data/: README.md  hko7_rainy_test_days.txt  hko7_rainy_train_days.txt  hko7_rainy_valid_days.txt  intensity_day.pkl  mask_dat.npz  rainy_days.csv  sorted_day.pkl  uncertain_days.txt  weather_statistics.csv
hko_data/benchmark_stat/: README.md  hko7_all_15_in5_out20_stride5_fixed.json  hko7_all_15_out20_stride5_online.json  hko7_rainy_test_in5_out20_stride5_fixed.json  hko7_rainy_test_out20_stride5_online.json  (+2 more)
hko_data/pd/: hko7_all_15.pkl  (+3 more)
notebook/: pixel_counts.npy  preprocess.ipynb  test.ipynb  test_Model.ipynb  test_model.ipynb  train.ipynb  实现 TrajGRU.ipynb  未命名.ipynb
nowcasting/: benchmark.py  config.py  train.py  train_and_test.py  utils.py
(+17 files in other folders)
